src/styles/_itemTile.scss
.item-tile-image, .no-item-tile-title-image {
  width: 100%;
  height: 300px;
  object-fit: cover;
  border-radius: var(--border-radius);

  &.large {
    height: 400px;
  }
}

.no-item-tile-title-image {
  background: var(--background-secondary-color);
  color: var(--color);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 100px;
  border-radius: var(--border-radius);

  .material-icons {
    opacity: .15;
  }
}

.item-tile-name {
  font-weight: bold;
  font-size: 1.5em;
  margin: 0;

  a {
    color: var(--color);
    transition: color $animationSpeed;

    &:hover {
      color: var(--primary-color);
    }
  }
}

.item-tile-description {
  font-size: .9em;
}

.item-tile-meta {
  text-transform: uppercase;
  font-size: .85em;
}

.item-tile-horizontal {
  margin-top: 15px;
  margin-bottom: 35px;

  .item-tile-image, .no-item-tile-title-image {
    height: 210px !important;
  }

  .item-tile-description {
    margin: 20px 0;
  }
}

.item-tile-small {
  .item-tile-image, .no-item-tile-title-image {
    height: 210px !important;
  }

  .item-tile-name {
    font-size: 1.2em;
    line-height: 1.5em;
    margin-bottom: 0;
  }
}

